--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "mongodb": "^3.5.5",
+    "pm2": "^4.2.3"
   },
   "devDependencies": {
     "got": "^11.3.0",
