--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "ejs": "^2.5.6",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "got": "^11.3.0",
+    "nodemon": "^2.0.6",
     "tape": "^4.7.0"
   },
   "repository": {
