--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "^4.15.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
     "mongodb": "^3.5.5",
-    "pm2": "^4.2.3"
+    "pm2": "^4.2.3",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "got": "^11.3.0",
